Release 0.91_01
    added SIGNATURE support to make dist
    added signature test

Release 0.90
    changed LICENSE information in README removed "same terms as perl" and be
        more explicit.
    moved password check routines out into Util::compare_password()
    removed last of the hard coded SQL in Apache2::AuthTicket
    removed cruft in Apache2::AuthTicket left over from MP1 migration
    changed $this => $self
    added tests for tampered cookie, CheckIP=0, CheckBrowser=1
    changed config parsing so that boolean values can be specified as any of:
        TRUE : 1, yes, on, true
        FALSE: 0, no, off, false
    added Apache::AuthTicket::Util and moved some internal into it
    added configuration parameter TicketCheckBrowser which enables checking of
        the client User-Agent string.
    added configuration parameter TicketCheckIP so client ip address checks can
        be disabled.
    added test cases to check that cookie fields secure, path, and domain work
    moved source management to github.com:
        http://github.com/mschout/apache-authticket/
    updated documentation for MP2
    addedd a real test suite using DBD::SQLite backing, Apache::Test and
        Test::More

Release 0.40
   o update to use new Apache::Filter API (you need at least 1.012 now)
   o Create Apache2::AuthTicket from copy of Apache::AuthTicket and ported to
     mod_perl 2.0 API.  This is the first release that supports mod_perl2
   o MP2 - use SQL::Abstract to generate queries

Release 0.31
   o Removed an email address from Changes file via owners request.

Release 0.30
   o Changed calls from to Digest::MD5->md5_hex to just Digest::MD5::md5_hex()
     This causes md5 passwords generated with other md5() routines (PHP for 
     example to fail).  Thanks to Steve Chadsey for spotting this.

     ** NOTE ** MD5 passwords that worked with previous versions will not work
     with this version due to the fact that md5_hex() was used incorrectly.  